apps/infra/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  controllerName: gateway.nginx.org/gateway-controller
  description: NGINX Gateway Fabric implementation
